--- a/informational-site/views/layout.jade
+++ b/informational-site/views/layout.jade
@@ -4,4 +4,13 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    header
+      ul#nav
+        li
+          a(href="/") home
+        li
+          a(href="/about") about
+        li
+          a(href="/contact") contact
+
     block content
